@@ -1,3 +1,8 @@
+2004-01-12  Jacob Smullyan  <smulloni@bracknell.smullyan.org>
+
+	* pylibs/skunk/date/format.py (HTTPDate): adding (replacing
+	equivalent function in Date module).
+
 2004-01-10  Jacob Smullyan  <smulloni@bunbury.smullyan.org>
 
 	* SkunkWeb/Services/templating/Handler.py: bug fix: now hide .inc
